# nix-home

./: .gitattributes  .gitignore  .gitmodules  .terraform.lock.hcl  .workmux.yaml  .zshrc  CLAUDE.md  adguard.tf  common.nix  config.nix  configuration.nix  darwin-configuration.nix  default.nix  devshell.nix  flake.nix  flake.org  garnix.yaml  hardware-configuration.nix  home.nix  justfile  link.org  macintosh.nix  my  nixos_system.nix  nohup.out  old-readme.org  org-roam.el  packages.nix  readme.html  readme.org  readme.org_archive  secrets.txt  shell.nix  simple.kbd  system.nix  systemModule.nix  tasks.py  treefmt.nix  treefmt.toml  update  (+3 more)
.claude/: README.md  settings.local.json
docs/: emacs-pdmp-macos-fixes.org  external-monitors.md  lance-fork-fix-plan.md  lance-packaging-plan.org  nix-casks.org  remote-deploy.md  wezterm-plan.org
hosts/: asche.nix  ashe.nix  colmena.nix  default.nix  mist.nix  readme.org  wf17084.nix  wk01174.nix  yuan-mac.nix
hs-land/: cabal.project  default.nix  example.cabal  flake.nix  overlay.nix  readme.org
hs-land/resource-id/: LICENSE  README.md  release.nix  resource-id.cabal
hs-land/resource-id/app/: Main.hs
hs-land/resource-id/src/: Lib.hs
hs-land/ws-access-token/: readme.org  release.nix  ws-access-token.cabal
hs-land/ws-access-token/src/: WsAccessToken.hs
hs-land/ws-access-token/test/: Main.hs
modules/: .gitattributes  .xmobarrc  adguard.nix  adguradhome-with-user.nix  agenix.nix  ai.nix  aws.nix  brew.nix  caddy.nix  catppuccin.nix  claude-code.nix  cockpit.nix  comfyui.nix  common.nix  dart.nix  default.nix  dotfiles.nix  droid.nix  ds4.nix  editor.nix  forge.nix  git-credentials.md  git-credentials.nix  ha.nix  haskell.nix  health.nix  helix.nix  hledger.nix  home.nix  hosts.nix  isponsorblocktv.nix  isponsorblocktv_service.nix  java.nix  jellyfin-darwin.nix  lance.nix  ledger.nix  linux_packages.nix  login-items.nix  macintosh.nix  macos_packages.nix  (+19 more)
my/: flake.nix  my.nix
nix/: sources.json
osConfigurations/: default.nix
overlays/: 30-apps.nix  alerter.nix  castero.nix  dart.nix  default.nix  docker-credential-pass.nix  easy-hls.nix  emacs-plus.nix  emojify.nix  firefox.nix  font-hack-nerd-font.nix  gh.nix  gotta-go-fast.nix  haskell-language-server.nix  hosts.nix  ical-buddy.nix  ihp-new.nix  ihp.nix  istio.nix  jdt-language-server.nix  lorri.nix  pragmata-pro-font.nix  sf_symbols.nix  sketchybar-app-font.nix  ta  yabai.nix  zellij.nix
overlays_/: 20-1password.nix  20-pass-git-helper.nix  30-apps.nix  dart.nix  gh.nix  haskell-language-server.nix  istio.nix  jupyterWithBatteries.nix  knative.nix  lorri.nix  ormolu.nix  pass-git-helper.json
plans/: cockpit-gpu-dgx-spark.org  ornith-dgx-spark-docker.org  ornith-dgx-spark-native.org  parakeet-mlx-integration.md  vllm-native-dgx-spark.org  vllm-ultimate-dgx-spark-docker.org
scripts/: bump-semver-git-sources.sh  clone-repo  commit.sh  prefetch-work-sources.sh  render-work-generated-nix.py  search-repo.sh  search.hs  switch.sh
secrets/: adguard.age  hass.age  (+11 more)
(+308 files in other folders)
