name:          ws-access-token
synopsis:      Project synopsis
version:       0.0.1.0
homepage:      https://github.com/yuanwang-wf/ws-access-token
license:       BSD3
author:        Your Name
maintainer:    Your Name
copyright:     Your Name
category:      Package.Category
build-type:    Simple
cabal-version: >=1.10

library
  hs-source-dirs:   src
  default-language: Haskell2010
  exposed-modules:  WsAccessToken
  ghc-options:      -Wall -fno-warn-name-shadowing
  build-depends:
      aeson
    , base        >=4.11 && <5
    , bytestring
    , containers
    , cryptonite
    , dhall
    , jwt
    , req
    , text
    , time
    , vector

executable ws-access-token
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:      -threaded -O2
  build-depends:
      base
    , ws-access-token

test-suite ws-access-token-tests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  default-language: Haskell2010
  ghc-options:      -Wall -threaded
  build-depends:
      base             >=4.11 && <5
    , hedgehog
    , ws-access-token
